# sei-dlp-core

./: .env.example  .gitignore  API.md  ARCHITECTURE_DIAGRAM.md  CONTRACT_ADDRESSES_UPDATED.md  CSS_NAVIGATION_DEBUG_SOLUTION.md  DEMO_MODE.md  DEMO_RECORDING_GUIDE.md  DEPLOYMENT_READY_SUMMARY.md  DEPOSIT_FIX_DEPLOYMENT_GUIDE.md  ELIZAOS_INTEGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_GUIDE.md  QUICK_FIX_REFERENCE.md  README.md  TESTING_GUIDE.md  TESTING_PLAN.md  YIELD_DELTA_INTEGRATION_GUIDE.md  claude.md  jest.config.js  jest.setup.js  mdx-components.tsx  next.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.js  tailwind.config.ts  theme.config.tsx  tsconfig.json
.crush/: crush.db-shm  crush.db-wal
ai-engine/: .coverage  .env.example  .gitignore  COVERAGE_REPORT.md  COVERAGE_REPORT_FINAL.md  COVERAGE_REPORT_TEST_FIXES_FINAL.md  README.md  api_bridge.py  dev-setup.sh  install.sh  pyproject.toml  requirements.txt  setup.py
ai-engine/sei_dlp_ai/: __init__.py
ai-engine/sei_dlp_ai/core/: __init__.py  engine.py
ai-engine/sei_dlp_ai/integrations/: elizaos_client.py
ai-engine/sei_dlp_ai/models/: liquidity_optimizer.py  risk_manager.py
ai-engine/sei_dlp_ai/types/: __init__.py
ai-engine/tests/: conftest.py  test_types.py  test_utils.py
ai-engine/tests/test_core/: test_engine.py
ai-engine/tests/test_integrations/: test_elizaos_client.py  test_elizaos_client_coverage.py
ai-engine/tests/test_models/: test_liquidity_optimizer.py  test_liquidity_optimizer_100_coverage.py
(+266 files in other folders)
