[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sei-dlp-ai-engine"
version = "0.1.0"
description = "AI-driven liquidity optimization engine for SEI DLP"
authors = ["SEI DLP Team <team@sei-dlp.com>"]
readme = "README.md"
packages = [{include = "sei_dlp_ai"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
onnxruntime = "^1.16.0"
pydantic = "^2.4.0"
aiohttp = "^3.8.0"
websockets = "^11.0"
redis = "^5.0.0"
python-dotenv = "^1.0.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
flake8 = "^6.0.0"
pytest-mock = "^3.11.0"
aioresponses = "^0.7.8"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=sei_dlp_ai --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"
